--- a/style.css
+++ b/style.css
@@ -40,3 +40,16 @@ button {
     }
 
 }
+body {
+  font-family: Arial;
+  margin: 20px;
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+input, button {
+  padding: 10px;
+  margin: 5px;
+  font-size: 16px;
+}
